myservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
        - image: benk27/myservice:v1
          imagePullPolicy: IfNotPresent
          name: myservice
      restartPolicy: Always
