myservice2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myservice2
  template:
    metadata:
      labels:
        app: myservice2
    spec:
      containers:
        - image: benk27/myservice:v2
          imagePullPolicy: IfNotPresent
          name: myservice2
      restartPolicy: Always
