myservice-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myservice
  name: myservice
spec:
  ports:
    - nodePort: 30945
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: myservice
  type: LoadBalancer
