myservice2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice2
spec:
  ports:
    - nodePort: 31281
      port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservice2
  type: NodePort
